# Back-End

./: .gitignore  README.md  pyproject.toml  requirements.txt
charlie/: __init__.py  main.py  run.py  settings.py
charlie/applications/adoptions/: compatibility.py  controllers.py  models.py  routes.py  schemas.py
charlie/applications/common_schemas/: base.py
charlie/applications/owners/: controllers.py  models.py  routes.py  schemas.py  utils.py
charlie/applications/pets/: controllers.py  models.py  routes.py  schemas.py
charlie/applications/users/: controllers.py  models.py  routes.py  schemas.py
charlie/db/: users.json
charlie/db_operations/: operations.py  utils.py
charlie/dependencies/: database.py
charlie/utils/: __init__.py  identifier_validators.py  pyobjectid.py  routes.py  types.py
environments/: example.env  test.env
requests/: request.rest
src/charlie-backend/: main.py
src/charlie-backend/api_routes/v1/: routes.py
tests/: conftest.py  test_pets.py
