[tool.poetry]
name = "charlie"
version = "0.1.0"
description = "Adoption system for pets"
authors = ["Mateus Charloto mateus.charloto@edu.pucrs.br"]
readme = "README.md"
packages = [{ include = "charlie" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = { extras = ["email"], version = "^2.6.0" }
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.3"
motor = "^3.4.0"
validate-docbr = "^1.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
